samples/_failures_safe/1761500417_3a5519_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ff2b6e8.c: In function ‘main’:
./samples/SAFE/__tmp_8ff2b6e8.c:141:25: error: missing terminating " character
  141 |         fprintf(stderr, "Failed to add compression block 2
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8ff2b6e8.c:141:9: error: expected expression at end of input
  141 |         fprintf(stderr, "Failed to add compression block 2
      |         ^~~~~~~
./samples/SAFE/__tmp_8ff2b6e8.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ff2b6e8.c:141:9: error: expected declaration or statement at end of input
